--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-# Byte-compiled / optimized / DLL files
+# PlanIt - .gitignore
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,47 +18,60 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
 # Virtual environments
-.env
-.venv
-env/
+planit-env/
 venv/
+env/
 ENV/
 env.bak/
 venv.bak/
 
-# IDEs
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+planit.db
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# PlanIt specific
-.planit/
-*.db
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Local config
+.env
+.env.local
+config.local.py
+
+# Logs
+*.log
+logs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# MyPy
+.mypy_cache/
+.dmypy.json
+planit-env/
+planit_env/
